# disslucc-continuous

./: .gitignore  README.md  benchmark.record.json  mkdocs.yml  pyproject.toml  validate.record.json
benchmark/: profiling_064d4f68.md  profiling_12af2d48.md  profiling_4b2f938b.md  profiling_52b82914.md  profiling_536c9c72.md  profiling_859b8638.md  profiling_f209e046.md  report.md  simulacao_064d4f68.record.json  simulacao_12af2d48.record.json  simulacao_4b2f938b.record.json  simulacao_52b82914.record.json  simulacao_536c9c72.record.json  simulacao_859b8638.record.json  simulacao_f209e046.record.json  validate_lab1.py
benchmark/simulacao_064d4f68.tif/: report.md
benchmark/simulacao_12af2d48.tif/: report.md
benchmark/simulacao_4b2f938b.tif/: report.md
benchmark/simulacao_52b82914.tif/: report.md
benchmark/simulacao_536c9c72.tif/: report.md
benchmark/simulacao_859b8638.tif/: report.md
benchmark/simulacao_f209e046.tif/: report.md
examples/: experiment_record.json  lab1_raster.py  lab1_vector.py  local_output.gpkg  model.toml  profiling_0c11177b.md  profiling_4eadf928.md  profiling_737852f1.md  profiling_be6b17fc.md
examples/data/input/: examples_demand_lab1.csv
examples/data/output/: profiling_ed9f5f68.md  result_ed9f5f68.record.json  result_ed9f5f68.tif
src/dissluc/: __init__.py  schemas.py
src/dissluc/demand/: precomputed.py
src/dissluc/executor/: clue_like_raster_executor.py  clue_like_vector_executor.py  lucc_benchmark_executor.py
src/dissluc/vector/: __init__.py
src/disslucc/: __init__.py
src/disslucc/common/: protocols.py
(+35 files in other folders)
