[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissluc-continuous"
version = "0.2.0"
description = "Land Use Change simulation plugin for DisSModel"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@ufma.br" }]
license = { text = "MIT" }
dependencies = [
    "dissmodel @ git+https://github.com/LambdaGeo/dissmodel.git@develop",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "geopandas>=0.12.0",
    "rasterio>=1.3.0",
    "mapclassify>=2.4.0",
]
requires-python = ">=3.9"